--- a/vignettes/aicsPaper.Rmd
+++ b/vignettes/aicsPaper.Rmd
@@ -116,7 +116,7 @@ The main steps are:
 3. Find the optimized parameters for the ancestry inference
 4. Run the ancestry inference on the external study
 
-In the following sections, those main sections are described in details.
+In the following sections, those main steps are described in details.
 
 <br>
 <br>
@@ -156,8 +156,10 @@ The vignette [Formatting the information from 1000 Genomes (optional)](Create_1K
 
 ## Step 2 - Format information from an external study to get it ready for ancestry inference
 
-To run the ancestry inference on samples from an external study. The 
+To be able to run the ancestry inference on samples from an external study, the 
 information about the samples needs to follow a specific format.
+
+The preparation of the external study data is divided is sub-steps.
 
 
 ```{r graphStep2, echo = FALSE, fig.align="center", fig.cap="Step 2 - Formatting the information from an external study", out.width = '120%', results='asis'}
@@ -167,7 +169,7 @@ knitr::include_graphics("MainSteps_Step2_v01.png")
 The required sub-steps are:
 
 1. Create a directory containing the 3 required reference files
-2. Generate a Sample VCF file (1 VCF file per sample)
+2. Generate a Sample SNP pileup file (1 file per sample)
 3. Create a RDS file containing information about the samples
 4. Create a GDS Sample file (1 GDS file per sample)
 5. Generate a pruned subset of the single nucleotide variants (SNVs) 
@@ -209,31 +211,35 @@ you can refer to the vignette
 
 <br>
 
-### Sub-Step 2. Generate a Sample VCF file (1 file per sample)
+### Sub-Step 2. Generate a Sample SNP pileup file (1 file per sample)
 
 This step requires the installation of the external code 
 [snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode) which 
-is associated to the facets package [@Shen2016]. 
-
-Given a VCF file containing SNP locations, 
+is associated to the facets package [@Shen2016]. Given a VCF file 
+containing SNP locations, 
 [snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode) 
 application outputs, for each location, 
 the counts of the reference and alternative nucleotide from an BAM input.
 
 At this step, 
 [snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode) is used 
-to generate a Sample VCF file that will contain the reference and alternative 
+to generate a Sample SNP pileup file that will contain the reference and 
+alternative 
 nucleotides counts at each SNP location present in the reference 1KG GDS file.
-The 1KG VCF file which contains the list of retained 1KG SNPs is required. 
+The 1KG VCF file, which contains the list of retained 1KG SNPs, is required. 
 
 
-```{r graphStep2_SubStep2, echo=FALSE, fig.align="center", fig.cap="Generate a Sample VCF file (1 file per sample)", out.width='100%', results='asis'}
+```{r graphStep2_SubStep2, echo=FALSE, fig.align="center", fig.cap="Generate a Sample SNP pileup file (1 file per sample)", out.width='100%', results='asis'}
 knitr::include_graphics("MainSteps_Step2_SubStep2_SNP-Pileup_v01.png")
 ```
 
-Beware that the name assigned to the Sample VCF file will correspond to the 
-Sample identifier (Name.ID) in the following analysis. For example, a VCF 
-called "Sample.01.txt.gz" would be associated to the sample "Sample.01". 
+Beware that the name assigned to the Sample SNP pileup file will correspond to 
+the Sample identifier (Name.ID) in the following analysis. For example, a SNP 
+pileupe file called "Sample.01.txt.gz" would be associated to the 
+sample "Sample.01". 
+
+This is the command line to run 
+[snp-pileup](https://github.com/mskcc/facets/tree/master/inst/extcode):
 
 ```{r snpPileup, echo=TRUE, eval=FALSE, highlight=TRUE}
 
@@ -258,15 +264,15 @@ snp-pileup -g -d5000 -q15 -Q20  -r0 PATH_REF/snvSel0.01.vcf.gz PATH_OUT/Name.ID.
 
 A RDS file describing the samples that are part of the analysis is required.
 
-The RDS file must contain a \code{data.frame} with those 5 columns:
+The RDS file must contain a __data.frame__ with those 5 columns:
 
 - **Name.ID**: The unique sample identifier. The GDS Sample file associated to 
 this sample should be called "Name.ID.txt.gz". 
 - **Case.ID**: The patient identifier associated to the sample.
-- **Sample.Type**: The information about the sample type (primary tissue, 
-xenograft, organoid, etc..). 
+- **Sample.Type**: The information about the sample type (primary tumor, 
+metastasis, normal, etc..). 
 - **Diagnosis**: The diagnosis associated to the patient.
-- **Source**: The source of the sample.
+- **Source**: The source of the sample (example: TCGA-BRCA).
 
 This file is referred as the PED RDS file (PED for pedigree).
 
@@ -305,22 +311,19 @@ rm(demo_PED_File)
 This step requires 4 files as input:
 
 - The 1KG GDS file
-- The 1KG SNP Retained VCF file 
-- The VCF Sample file
+- The Sample SNP pileup file (one per sample present in the study)
 - The PED RDS file
 
-A \code{data.frame} containing the general information about the study is 
-also required. The \code{data.frame} must have those 3 columns:
+A ___data.frame__ containing the general information about the study is 
+also required. The __data.frame__ must have those 3 columns:
 
-- **study.id**
-- **study.desc**
-- **study.platform**
+- **study.id**: The study identifier (example: TCGA-BRCA).
+- **study.desc**: The description of the study.
+- **study.platform**: The type of sequencing (example: RNA-seq).
 
-Using those inputs, the function _appendStudy2GDS1KG()_ will generate 
-a GDS Sample file. 
-
-One GDS Sample file is created for each sample passed to the 
-__listSamples__ argument.
+Using all those inputs, the __createStudy2GDS1KG()_ function will 
+generate a GDS Sample file. One GDS Sample file is created for each sample 
+passed to the __listSamples__ argument.
 
 ```{r appendStudy2GDS1KG, echo=TRUE, eval=FALSE}
 ##############################################################
@@ -338,22 +341,23 @@ fileName.GDS <- "matGeno1000g.gds"
 file.GDS <- file.path(PATH_1KG, fileName.GDS)
 
 #################################################################
-## The Sample VCF files (one per sample) need  
-## to be located in the same directory
+## The Sample SNP pileup files (one per sample) need  
+## to be located in the same directory.
 #################################################################
-PATHGENO <- file.path(PATH_PILEUP)
+PATHGENO <- file.path(PATH_SAMPLE_SNP_PILEUP)
 
 #################################################################
 ## The path where the Sample GDS files (one per sample)
-## will be created need to be specified
+## will be created need to be specified.
 #################################################################
-PATHSAMPLEGDS <- file.path("Sample_GDS_directory")
+PATHSAMPLEGDS <- file.path(PATH_SAMPLE_GDS_FILES)
     
 #################################################################
 ## The path and file name for the PED RDS file 
 ## will the information about the analyzed samples
 #################################################################
 filePED <- FILE_PED
+ped <- readRDS(filePED)
     
 #################################################################
 ## A data frame containing general information about the study
@@ -368,19 +372,19 @@ studyDF <- data.frame(study.id = "Id of the study",
 #################################################################
 ## The list of samples to analyzed is passed to the 
 ## function. The samples must be present in the PED RDS file
-## and must have an associated GDS Sample file.
+## and must have an associated Sample SNP pileup file.
+## Not all samples present in the PED file need to be selected.
 #################################################################
 listSamples <- ped[, "Name.ID"]
     
 #################################################################
 ## This function creates one GDS Sample file for each 
-## sample present in the 'listSamples' parameter
+## sample present in the 'listSamples' parameter.
 #################################################################
-appendStudy2GDS1KG(PATHGENO = PATHGENO,
-                      fileNamePED = filePED,
+createStudy2GDS1KG(PATHGENO = PATHGENO,
+                      pedStudy = ped,
                       fileNameGDS = file.GDS,
                       listSamples = listSamples,
-                      batch = 1,  ## Numerical value required
                       studyDF = studyDF,
                       PATHSAMPLEGDS = PATHSAMPLEGDS)))
 ```
